# scaffold

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
src/: config.py
src/utils/: logging.py
