[tool.poetry]
name = "scaffold"
version = "0.1.0"
description = "A scaffold project for python ML/data science"
authors = ["Syen Park <syen.park@connect.ust.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.7.3"
pre-commit = "^4.0.1"
pre-commit-hooks = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
extend-exclude = ["template/**"]
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D107", "ISC001"]

[tool.ruff.lint.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.per-file-ignores]
"migrations/**" = ["INP001"]
"tests/**" = ["S101"]
